--- a/pacman.conf
+++ b/pacman.conf
@@ -23,7 +23,7 @@ HoldPkg     = pacman glibc
 Architecture = auto
 
 # Pacman won't upgrade packages listed in IgnorePkg and members of IgnoreGroup
-# ## IgnorePkg = php apache
+IgnorePkg = php apache linux-lts linux-lts-headers
 # ## linux-lts linux-lts-headers
 #IgnorePkg = ca-certificates ca-certificates-mozilla ca-certificates-utils linux linux-headers
 # Also, ignore php (for dokuwiki), apache,.
